--- a/.github/workflows/ftps.yml
+++ b/.github/workflows/ftps.yml
@@ -53,7 +53,7 @@ jobs:
                   host: ${{ secrets.SSH_HOST }}
                   username: ${{ secrets.SSH_USER }}
                   password: ${{ secrets.SSH_PASSWORD }}
-                  source: "deploy/."
+                  source: "deploy/"
                   target: "/var/www/snowfall-generator"
 
             - name: SSH Deploy server and restart
