--- a/.github/workflows/ftps.yml
+++ b/.github/workflows/ftps.yml
@@ -54,6 +54,7 @@ jobs:
                   username: ${{ secrets.SSH_USER }}
                   password: ${{ secrets.SSH_PASSWORD }}
                   source: "deploy/"
+                  strip_components: 1
                   target: "/var/www/snowfall-generator"
 
             - name: SSH Deploy server and restart
