--- a/.github/workflows/ftps.yml
+++ b/.github/workflows/ftps.yml
@@ -33,37 +33,25 @@ jobs:
             - name: Build project
               run: npm run build
 
-            - name: Prepare deploy folder with exclusions
-              run: |
-                  rm -rf deploy
-                  mkdir deploy
-                  rsync -av --progress . deploy/ \
-                    --exclude '.git' \
-                    --exclude '.github' \
-                    --exclude 'node_modules' \
-                    --exclude 'src' \
-                    --exclude 'deploy' \
-                    --exclude 'README.md' \
-                    --exclude 'package-lock.json' \
-                    --exclude 'gulpfile.js'
+            - name: Generate Config
+              env:
+                  API_URL: ${{ secrets.API_URL }}
+              run: node generateConfig.js
 
-            - name: Upload frontend files via SFTP
-              uses: appleboy/scp-action@v0.1.3
+            - name: SFTP Deploy
+              uses: SamKirkland/FTP-Deploy-Action@v4.3.5
               with:
-                  host: ${{ secrets.SSH_HOST }}
+                  server: snowfall-generator.beget.tech
                   username: ${{ secrets.SSH_USER }}
                   password: ${{ secrets.SSH_PASSWORD }}
-                  source: "deploy/"
-                  strip_components: 1
-                  target: "/var/www/snowfall-generator"
-
-            - name: SSH Deploy server and restart
-              uses: appleboy/ssh-action@v0.1.7
-              with:
-                  host: ${{ secrets.SSH_HOST }}
-                  username: ${{ secrets.SSH_USER }}
-                  password: ${{ secrets.SSH_PASSWORD }}
-                  script: |
-                      cd /var/www/snowfall-generator/server
-                      npm install --production
-                      pm2 restart snowfall-server || pm2 start server.js --name snowfall-server
+                  protocol: ftps
+                  local-dir: ./
+                  exclude: |
+                      **/.git*
+                      **/node_modules/**
+                      **/src/**
+                      **/package.json
+                      **/package-lock.json
+                      **/gulpfile.js
+                      **/generateApiKeys.js
+                      **/README.md
