--- a/.github/workflows/generate-readme.yml
+++ b/.github/workflows/generate-readme.yml
@@ -21,7 +21,14 @@ jobs:
               uses: actions/setup-node@v4
               with:
                   node-version: 23
-                  cache: 'npm'
+
+            - name: Cache Node.js modules
+              uses: actions/cache@v4
+              with:
+                  path: ~/.npm
+                  key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
+                  restore-keys: |
+                      ${{ runner.os }}-node-
 
             - name: Generate README.md
               run: node .github/scripts/generate-readme.js
