Настройка GitHub Actions

--- a/.github/workflows/ftps.yml
+++ b/.github/workflows/ftps.yml
@@ -5,6 +5,7 @@ on:
         branches: [ "main" ]
         paths-ignore:
             - '.info/**'
+            - '.github/workflows/generateReadme.yml'
     pull_request:
         branches: [ "main" ]
 
