--- a/.github/workflows/generateReadme.yml
+++ b/.github/workflows/generateReadme.yml
@@ -37,6 +37,6 @@ jobs:
               uses: stefanzweifel/git-auto-commit-action@v5
               with:
                   commit_message: "Generate README.md from template"
-                  file_pattern: README-test.md
+                  file_pattern: README.md
                   commit_user_name: "GitHub Actions Bot"
                   commit_user_email: "actions@github.com"
