--- a/.github/workflows/ftps.yml
+++ b/.github/workflows/ftps.yml
@@ -6,6 +6,7 @@ on:
         paths-ignore:
             - '.info/**'
             - '.github/workflows/generateReadme.yml'
+            - 'README.md'
     pull_request:
         branches: [ "main" ]
 
