--- a/.github/workflows/ftps.yml
+++ b/.github/workflows/ftps.yml
@@ -40,6 +40,7 @@ jobs:
             - name: Generate Config
               env:
                   API_URL: ${{ secrets.API_URL }}
+                  GITHUB_WORKSPACE: ${{ github.workspace }}
               run: node .github/scripts/generateConfig.js
 
             - name: SFTP Deploy
