Обновление информации о проекте

--- a/.info/project.json
+++ b/.info/project.json
@@ -9,6 +9,16 @@
     "deploy": "https://snowfall-generator.ru/",
     "features": [
         {
+            "name-ru": "Дата разработки",
+            "name-en": "Development date",
+            "description-ru": [
+                "Апрель 2025"
+            ],
+            "description-en": [
+                "April 2025"
+            ]
+        },
+        {
             "name-ru": "Страницы",
             "name-en": "Pages",
             "description-ru": [
@@ -49,6 +59,38 @@
                 "Choice of 2 types of snowflakes",
                 "Custom styles for input"
             ]
+        }
+    ],
+    "technologies": [
+        {
+            "name": "HTML",
+            "icon": "icon-html",
+            "link": "https://html.spec.whatwg.org/multipage/"
+        },
+        {
+            "name": "SCSS",
+            "icon": "icon-scss",
+            "link": "https://sass-scss.ru/"
+        },
+        {
+            "name": "JavaScript",
+            "icon": "icon-js",
+            "link": "https://ecma-international.org/publications-and-standards/standards/ecma-262/"
+        },
+        {
+            "name": "Vue",
+            "icon": "icon-vue",
+            "link": "https://vuejs.org/"
+        },
+        {
+            "name": "PHP",
+            "icon": "icon-php",
+            "link": "https://www.php.net/"
+        },
+        {
+            "name": "Gulp",
+            "icon": "icon-gulp",
+            "link": "https://gulpjs.com/"
         }
     ]
 }
